# alpha_project

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  homescreen.ui  settings.ui
app/: main.cpp
data/: folders.json  schedule.json  tasks.json
docs/: build.md  download-site-hosting.md  overview.md  user-flows.md
include/: appPaths.h  home.h  homescreen.h  notes.h  reminder.h  reminderGestor.h  schedule.h  settings.h  task.h  taskGestor.h
resources/: resources.qrc
src/: appPaths.cc  homescreen.cc  noteGestor.cc  notes.cc  reminderGestor.cc  schedule.cc  settings.cc  task.cc  taskGestor.cc
tests/: basic_smoke_tests.cc
ui/: homescreen.ui  notes.ui  schedule.ui  settings.ui
